# GAPS_remote_data_downloader

./: README.md  download_data_GAPS_db.py
bfsw-main/: CMakeLists.txt  README.md  TODO.md
bfsw-main/include/: cmd.hpp  cooling.hpp  disk_logger.hpp  event_builder.hpp  gfp.hpp  labjack.hpp  network.hpp  pdu.hpp  telemetry.hpp  tracker.hpp  tracker_power.hpp  watchdog.hpp
bfsw-main/pybfsw/: README.md
bfsw-main/pybfsw/bind/: CMakeLists.txt  gsedb_test1.sqlite  merged_event_bindings.cpp  merged_event_test1.py  pybfsw_tests.cpp
bfsw-main/pybfsw/common/: launch_gsedb.py  loop_tracker_data.py  packet_tools.py  pdu_pair_test.py  pdu_parse.py  raw2pair.py  replay.py  send_pdu_commands.py  sqlite_copy.py  sqlite_time_subset.py  timestampfmt.py  zmqpair_tcp_relay_async.py
bfsw-main/pybfsw/gse/: gse_commands.py  gsequery.py  parameter.py  pdu.yaml  pdu_gui.py  run_rpc_server.py  stripchart.py  termgse.py  terminal.py  text_tracker.py  textchart.py  triggered_event_gui.py
bfsw-main/pybfsw/payloads/: converters.py  gapsparse.py
bfsw-main/pybfsw/tests/: dbinterfaceremote_test1.py  eval_test.py  gsequery_test1.py  gsequery_test2.py  gsequery_test3.py
bfsw-main/tests/: CMakeLists.txt
bfsw-main/tests/command/: CMakeLists.txt  cmd_test1.cpp  cmd_test2.cpp
bfsw-main/tests/network/: CMakeLists.txt  tcp_server_test.py  tcp_test.cpp
bfsw-main/tools/: dbtest.py  fsw_packet_tools.py  gaps_data_sim.py  genfake.py  pac1933_pub.py  procmon_pub.py  rx.py  rx_merge_pybind_test.py  sili_power_commands.py  simfake.py  simfake_old1.py  sub.py  sysmon_pub.py
(+22 files in other folders)
